@@ -1,3 +1,7 @@
+2012-12-12 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/Symbol.h: c_str becomes const and added Symbol::operator==(const char* )
+
 2012-12-11  JJ Allaire <jj@rstudio.org>
       
         * R/Attributes.R: always print output when shared library is not created
